--- a/Klike/Sources/Controllers/KLEventGalleryCell.xib
+++ b/Klike/Sources/Controllers/KLEventGalleryCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -19,7 +19,7 @@
                                 <rect key="frame" x="0.0" y="7" width="320" height="74"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="74" id="83S-pq-o9I"/>
+                                    <constraint firstAttribute="height" priority="999" constant="74" id="83S-pq-o9I"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="hwX-Jn-DDH">
                                     <size key="itemSize" width="74" height="74"/>
@@ -37,7 +37,7 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="QCX-LY-88o" secondAttribute="bottom" constant="7" id="CWV-Jx-EcF"/>
                             <constraint firstItem="QCX-LY-88o" firstAttribute="top" secondItem="jM8-vB-YIc" secondAttribute="top" constant="7" id="NDf-1U-M8o"/>
-                            <constraint firstAttribute="height" constant="88" id="RNv-TI-Lvd"/>
+                            <constraint firstAttribute="height" priority="999" constant="88" id="RNv-TI-Lvd"/>
                             <constraint firstItem="QCX-LY-88o" firstAttribute="leading" secondItem="jM8-vB-YIc" secondAttribute="leading" id="XkL-5j-x8K"/>
                             <constraint firstAttribute="trailing" secondItem="QCX-LY-88o" secondAttribute="trailing" id="pZ8-By-9QI"/>
                             <constraint firstAttribute="bottom" secondItem="QCX-LY-88o" secondAttribute="bottom" constant="7" id="w4E-b7-jZu"/>
